syntax = "proto2";
package status5;
option go_package = "etop.vn/backend/pb/etop/etc/status5";

import "gogoproto/gogo.proto";
option (gogoproto.gogoproto_import)         = false;

enum Status {
    Z  = 0;
    P  = 1;
    S  = 2;
    N  = 127;
    NS = 126;
}
